--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "message-server",
   "version": "1.5.0",
   "scripts": {
+    "test": "mocha",
     "start": "node ./bin/www"
   },
   "dependencies": {
