--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.9.0",
   "scripts": {
     "test": "mocha",
-    "reset": "node ./bin/reset",
+    "reset": "rm database.sqlite3; node ./bin/reset",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -13,6 +13,7 @@
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "request": "^2.85.0",
     "sqlite3": "^4.0.0"
   },
   "description": "Beautiful, minimalist stateful server for converting internet into a list of messages with title, body, comments, and read/unread states.",
