--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
-    "debug": "~4.1.1",
+    "debug": "^4.3.4",
     "express": "~4.17.1",
     "hasha": "^5.1.0",
     "hbs": "^4.1.0",
